Fix: ensure image respects parent's dimensions
On Chrome and Safari, the avatar image was being stretched outside of
its parent's boundaries. This commit makes it so that the image can
only be as large as its parent (both width and height), never larger.

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -58,5 +58,7 @@
 }
 
 .navbar .container .nav-right .nav-item.avatar img {
+  max-height: 100%;
+  max-width: 100%;
   border-radius: 100%;
 }
